# odcread

./: CMakeLists.txt  Makefile  README.md  make-deb.sh
alien/: CMakeLists.txt
fold/: CMakeLists.txt
main/: CMakeLists.txt  odcread.cc
reader/: CMakeLists.txt
snap/: snapcraft.yaml
store/: CMakeLists.txt
textmodel/: CMakeLists.txt
typepath/: CMakeLists.txt
typeregister/: CMakeLists.txt
